@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.66 2005/10/13 17:13:35 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.67 2005/10/17 19:01:06 rocket Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -998,6 +998,9 @@ class generic_stage_target(generic_target):
 				mynames=self.settings["boot/kernel"]
 				if type(mynames)==types.StringType:
 					mynames=[mynames]
+				# execute the script that sets up the kernel build environment
+				cmd("/bin/bash "+self.settings["controller_file"]+" pre-kmerge ",\
+				   "Runscript pre-kmerge failed")
 		
 				for kname in mynames:
 					try:
@@ -1054,6 +1057,10 @@ class generic_stage_target(generic_target):
 						print "Cleaning up temporary overlay dir"
 						cmd("rm -R "+self.settings["chroot_path"]+"/tmp/initramfs_overlay/")
 
+				# execute the script that cleans up the kernel build environment
+				cmd("/bin/bash "+self.settings["controller_file"]+" post-kmerge ",\
+				   "Runscript post-kmerge failed")
+				
 				touch(self.settings["autoresume_path"]+"build_kernel")
 			
 			except CatalystError:
