@@ -1,5 +1,12 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.358 2005/10/17 17:11:33 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.359 2005/10/17 19:01:06 rocket Exp $
+
+  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, targets/embedded/embedded-controller.sh,
+  targets/livecd-stage2/livecd-stage2-controller.sh,
+  targets/netboot/netboot-controller.sh,
+  targets/stage4/stage4-controller.sh:
+  run pre_kmerge and post_kmerge only once
 
   17 Oct 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/bootloader-setup.sh:
